UV loop selection marks edges sharp #84568

Closed
opened 2021-01-10 08:17:48 +01:00 by Stanislav Blinov · 7 comments

Blender Version
Broken: 2.91, 2.92 master
Worked: 2.90.1

Short description of error

If you select a loop in UV editor, selected edges are marked sharp on the mesh, albeit with a delay. E.g. one needs to force the update by transforming the selected UVs or toggling edit mode.

Exact steps for others to reproduce the error
In the default file:

  • switch to UV editing workspace
  • in UV editor, select an edge loop (by alt-clicking an edge)
  • transform selection (move, rotate, scale, align, etc) or toggle edit mode.
**Blender Version** Broken: 2.91, 2.92 master Worked: 2.90.1 **Short description of error** If you select a loop in UV editor, selected edges are marked sharp on the mesh, albeit with a delay. E.g. one needs to force the update by transforming the selected UVs or toggling edit mode. **Exact steps for others to reproduce the error** In the default file: - switch to UV editing workspace - in UV editor, select an edge loop (by alt-clicking an edge) - transform selection (move, rotate, scale, align, etc) or toggle edit mode.

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this on 2.92.0 Alpha, branch: master, commit date: 2021-01-11 06:58, hash: 64929398fb. This seems indeed weird to me as I would not expect this to happen per default (maybe it was intended as an option).

I can confirm this on 2.92.0 Alpha, branch: master, commit date: 2021-01-11 06:58, hash: `64929398fb`. This seems indeed weird to me as I would not expect this to happen per default (maybe it was intended as an option).

Actually, transforming isn't the trigger, I think there's just a belated update. Toggling edit mode would also trigger the new "sharp" edges to show.

Actually, transforming isn't the trigger, I think there's just a belated update. Toggling edit mode would also trigger the new "sharp" edges to show.
Stanislav Blinov changed title from Transforming UVs after UV loop selection marks edges sharp to UV loop selection marks edges sharp 2021-01-13 08:05:16 +01:00

This issue was referenced by e25f7e33ff

This issue was referenced by e25f7e33ff4f2e2a5178ade82d1d4898fb07438b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2021-01-19 05:32:44 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84568
No description provided.