Fix T84568: UV loop selection marks edges sharp

Regression in 6a10e69d270bc6866dd0000ffc0b81f6205ba2e9
(added when testing).